--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "chat-app",
   "version": "1.0.0",
   "description": "A full Stack app built for real time chat application.",
-  "main": "server.js",
+  "main": "src/server.ts",
   "scripts": {
-    "dev": "nodemon",
-    "start": "npm run build && node build/server.js",
+    "build": "npx tsc",
+    "start": "node dist/server.ts",
+    "dev": "nodemon src/server.ts",
     "test": "jest --detectOpenHandles",
     "coverage": "jest --collect-coverage",
     "lint": "eslint ."
@@ -14,7 +15,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "socket.io": "^4.7.3",
+    "zod": "^3.22.4"
   }
 }
