--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "argon2": "^0.31.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.3",
     "zod": "^3.22.4"
   }
